--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -16,6 +16,7 @@
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 	@media only screen and (max-width: $laptop-land) {
 		font-size: 55%;
 	}
@@ -37,6 +38,7 @@ body {
 
 .container {
 	// width: 90%;
+	overflow-x: hidden;
 	max-width: 1300px;
 }
 .btn__box {
