--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -4,15 +4,16 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333);
+	transition: all 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333);
 	z-index: 5;
 	background: #ffffff;
+	overflow-x: hidden;
 
 	&.sticky {
 		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
 		position: fixed;
 		padding: 1rem 0;
-		transition: top 0.5s cubic-bezier(0.33333, 0, 0.66667, 0.33333);
+		transition: all 0.5s cubic-bezier(0.33333, 0, 0.66667, 0.33333);
 	}
 
 	&__container {
@@ -108,13 +109,9 @@
 		top: 0;
 		left: 0;
 		width: 100%;
+
 		.nav__menu {
 			transform: translateX(0) !important;
-		}
-		.hamburger {
-			position: absolute;
-			top: 3rem;
-			right: 2rem;
 		}
 		.hamburger--spring .hamburger-inner {
 			transition-delay: 0.22s;
