--- a/src/sass/pages/landing/_index.scss
+++ b/src/sass/pages/landing/_index.scss
@@ -76,13 +76,16 @@ body.home {
 			padding: 10rem 0;
 			padding-bottom: 15rem;
 			background: $color-primary;
+			position: relative;
+			z-index: 0;
 		}
 
 		.bottom {
+			z-index: 1;
+			margin-top: -5rem;
+			position: relative;
 			.video__box {
 				position: relative;
-				// transform: translateY(-5rem);
-				margin-top: -5rem;
 				max-height: 500px;
 				video {
 					width: 100%;
